--- a/src/views/cadastroAluno.ejs
+++ b/src/views/cadastroAluno.ejs
@@ -3,17 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="author" content="Ingrid">
-        <title>Cadastro | Sala</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
-        <script src="script.js" defer></script>
+        <title>Cadastro | Aluno</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="../css/style.css">
+        <script src="js/script.js" defer></script>
     </head>
 </head>
 
-<body class="h-100">
-    <div class="container-cadastro-salas">
-        <div class="navbar d-flex wh-100 flex-column flex-md-row align-items-center p-3 px-el-12 mb-3  shadow-lg">
+<body>
+    <div class="container-cadastro-alunos ">
+        <div class="navbar d-flex flex-column flex-md-row align-items-center p-3 px-el-12 mb-3  shadow-lg">
             <div class="titulo"><a href="index.html"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></a></div>
             <nav class="nav my-2 my-md-2 mr-md-3">
                 <b>Cadastrar: </b>
@@ -22,14 +22,31 @@
             </nav>
         </div>
         <form class="col-md-4">
-            <h2>Cadastrar uma nova sala</h2>
+            <h2>Cadastrar um novo aluno</h2>
+            <div class="div-img">
+                <img src="icon-default.png" id="img-aluno">
+                <input type="file" id="input-img" style="display: none;">
+            </div>
+
             <div class="form-group mb-4">
               <label for="exampleFormControlInput1">Nome</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome">
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome" required>
             </div>
             <div class="form-group mb-4">
-                <label for="exampleFormControlInput1">Capacidade</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="capacidade">
+                <label for="exampleFormControlInput1">Idade</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="idade" required>
+            </div>
+            <div class="form-group mb-4">
+                <label for="exampleFormControlInput1">Sexo</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="sexo" required>
+            </div>
+            <div class="form-group mb-4">
+              <label for="exampleFormControlSelect1">Sala</label>
+              <select class="form-control" id="exampleFormControlSelect1">
+                <option>TI</option>
+                <option>Manufatura</option>
+                <option>Análise de Dados</option>
+              </select>
             </div>
             <button class="btn btn-forms" type="submit">CADASTRAR</button>
           </form>
