--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="author" content="Ingrid">
         <title>Controle de Estudantes</title>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
-        <script src="script.js" defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/style.css">
+        <script src="js/script.js" defer></script>
     </head>
 
     <body class="h-100">
