--- a/src/views/cadastroSala.ejs
+++ b/src/views/cadastroSala.ejs
@@ -17,19 +17,19 @@
             <div class="titulo"><a href="index.html"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></a></div>
             <nav class="nav my-2 my-md-2 mr-md-3">
                 <b>Cadastrar: </b>
-                <a class="p-2 text-dark" href="cadastroAluno.html">Alunos</a>|
-                <a class="p-2 text-dark" href="cadastroSala.html">Sala</a>
+                <a class="p-2 text-dark" href="/cadastroAluno">Alunos</a>|
+                <a class="p-2 text-dark" href="/cadastroSala">Sala</a>
             </nav>
         </div>
-        <form class="col-md-4">
+        <form class="col-md-4" action="/cadastroSala">
             <h2>Cadastrar uma nova sala</h2>
             <div class="form-group mb-4">
-              <label for="exampleFormControlInput1">Nome</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome">
+              <label for="nome">Nome</label>
+              <input type="email" class="form-control" id="nome" placeholder="nome">
             </div>
             <div class="form-group mb-4">
-                <label for="exampleFormControlInput1">Capacidade</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="capacidade">
+                <label for="capacidade">Capacidade</label>
+                <input type="email" class="form-control" id="capacidade" placeholder="capacidade">
             </div>
             <button class="btn btn-forms" type="submit">CADASTRAR</button>
           </form>
