--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,8 +16,8 @@
                 <div class="titulo"><a href="index.html"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></a></div>
                 <nav class="nav my-2 my-md-2 mr-md-3">
                     <b>Cadastrar: </b>
-                    <a class="p-2 text-dark" href="cadastroAluno.html">Alunos</a>|
-                    <a class="p-2 text-dark" href="cadastroSala.html">Sala</a>
+                    <a class="p-2 text-dark" href="/cadastroAluno">Alunos</a>|
+                    <a class="p-2 text-dark" href="/cadastroSala">Sala</a>
                 </nav>
             </div>
 
