--- a/src/views/cadastroSala.ejs
+++ b/src/views/cadastroSala.ejs
@@ -14,7 +14,7 @@
 <body class="h-100">
     <div class="container-cadastro-salas">
         <div class="navbar d-flex wh-100 flex-column flex-md-row align-items-center p-3 px-el-12 mb-3  shadow-lg">
-            <div class="titulo"><a href="index.html"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></a></div>
+            <div class="titulo"><a href="/index"><h5 class="my-0 mr-md-auto font-weight-normal"><h5 class="titulo-colorido my-0 mr-md-auto">CONTROLE</h5> de Estudantes</h5></a></div>
             <nav class="nav my-2 my-md-2 mr-md-3">
                 <b>Cadastrar: </b>
                 <a class="p-2 text-dark" href="/cadastroAluno">Alunos</a>|
