--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -39,7 +39,7 @@
                   <% for (let i=0; i<alunos.length; i++) { %>
                   <div class="col-md-4">
                     <div class="card mb-4 shadow-sm">
-                      <img class="card-img-top" alt="Foto aluno" src="img/<%= alunos[i].Foto %>">
+                      <img class="card-img-top" alt="Foto aluno" src="imgs/<%= alunos[i].Foto %>">
                       <div class="card-body">
                         <h5 class="card-title"><%= alunos[i].Nome %></h5>
                         <p class="card-text">Idade: <%= alunos[i].Idade %></p>
