--- a/src/views/editarAluno.ejs
+++ b/src/views/editarAluno.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="author" content="Ingrid">
-        <title>Cadastro | Aluno</title>
+        <title>Editar | Aluno</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/style.css">
@@ -21,35 +21,36 @@
                 <a class="p-2 text-dark" href="/cadastroSala">Sala</a>
             </nav>
         </div>
-        <form class="col-md-4" action="/cadastroAluno" method="post" enctype="multipart/form-data">
-            <h2>Cadastrar um novo aluno</h2>
+
+        <form class="col-md-4" action="/editarAluno/<%= alunos.IDAluno %>" method="post" enctype="multipart/form-data">
+            <h2>Editar aluno</h2>
             <div class="div-img">
-                <img src="../imgs/icon-default.png" id="img-aluno" accept="image/*">
+                <img src="/img/<%= alunos.Foto %>" id="img-aluno" accept="image/*">
                 <input type="file" id="input-img" name="foto" style="display: none;">
             </div>
 
             <div class="form-group mb-4">
               <label for="nome">Nome</label>
-              <input type="text" class="form-control" id="nome" name="nome" placeholder="nome" required>
+              <input type="text" class="form-control" value="<%= alunos.Nome %>" id="nome" name="nome" placeholder="nome" required>
             </div>
             <div class="form-group mb-4">
                 <label for="idade">Idade</label>
-                <input type="number" class="form-control" id="idade" name="idade" placeholder="idade" required>
+                <input type="number" class="form-control" value="<%= alunos.Idade %>" id="idade" name="idade" placeholder="idade" required>
             </div>
             <div class="form-group mb-4">
                 <label for="sexo">Sexo</label>
-                <input type="text" class="form-control" id="sexo" name="sexo" placeholder="sexo" required>
+                <input type="text" class="form-control" value="<%= alunos.Sexo %>" id="sexo" name="sexo" placeholder="sexo" required>
             </div>
             <div class="form-group mb-4">
               <label for="sala">Sala</label>
               <select class="form-control" id="sala" name="sala" required>
                     <option hidden>Selecionar</option>
                     <% for (let i=0; i< salas.length; i++) { %>
-                        <option value='<%= salas[i].IDSala %>' > <%= salas[i].Nome %> </option>
+                        <option value='<%= salas[i].IDSala %>' <%= alunos.IDSala == salas[i].IDSala ? 'selected' : ''%>> <%= salas[i].Nome %> </option>
                     <% } %>
               </select>
             </div>
-            <button class="btn btn-forms" type="submit">CADASTRAR</button>
+            <button class="btn btn-forms" type="submit">ATUALIZAR</button>
           </form>
     </div>
 
