--- a/src/views/editarAluno.ejs
+++ b/src/views/editarAluno.ejs
@@ -25,7 +25,7 @@
         <form class="col-md-4" action="/editarAluno/<%= alunos.IDAluno %>" method="post" enctype="multipart/form-data">
             <h2>Editar aluno</h2>
             <div class="div-img">
-                <img src="/img/<%= alunos.Foto %>" id="img-aluno" accept="image/*">
+                <img src="/imgs/<%= alunos.Foto %>" id="img-aluno" accept="image/*">
                 <input type="file" id="input-img" name="foto" style="display: none;">
             </div>
 
