--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,6 +22,7 @@
             </div>
 
             <div class="selecao">
+              <h5>Qtd de alunos: 4/20</h5>
               <form method="post" action="/">
                 <p>Sala de Aula: </p>
                   <select class="form-select form-select-sm" aria-label="Small select example" id="sala" onchange="this.form.submit()" name="nome">
