--- a/src/views/editarAluno.ejs
+++ b/src/views/editarAluno.ejs
@@ -49,7 +49,10 @@
                         <% } %>
                 </select>
                 </div>
-                <button class="btn btn-forms" type="submit">ATUALIZAR</button>
+                <div class="btns">
+                    <button class="btn btn-forms" type="submit">ATUALIZAR</button>
+                    <button class="btn btn-forms btn-del" type="submit" name="envio" value="Excluir">EXCLUIR</button>
+                </div>
             </form>
         </div>
 
