--- a/src/views/editarSala.ejs
+++ b/src/views/editarSala.ejs
@@ -30,7 +30,10 @@
                     <label for="capacidade">Capacidade</label>
                     <input type="number" class="form-control" value="<%= salas.Capacidade %>"" id="capacidade" name="capacidade" placeholder="capacidade">
                 </div>
-                <button class="btn btn-forms" type="submit">ATUALIZAR</button>
+                <div class="btns">
+                    <button class="btn btn-forms" type="submit">ATUALIZAR</button>
+                    <button class="btn btn-forms btn-del" value="Excluir" name="envio" >EXCLUIR</button>
+                </div>
               </form>
         </div>
     
